--- a/2.7 binary_tree_level_order_traversal_ii.md
+++ b/2.7 binary_tree_level_order_traversal_ii.md
@@ -21,4 +21,57 @@ return its bottom-up level order traversal as:
 
 
 ---
+**Read 2.2 Binary Tree Level Order Traversal first.**
 
+The only difference is that we call a ```std::reverse(vector.begin(), vector.end())``` to reverse the output vector at the end.
+
+
+
+
+---
+
+```
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    vector<vector<int>> levelOrderBottom(TreeNode* root) 
+    {
+        vector<vector<int>> valueLevelOrder;
+        if(root == nullptr)
+        {
+            return valueLevelOrder;
+        }
+        queue<TreeNode*> nodesByLevel;
+        nodesByLevel.push(root);
+        while(!nodesByLevel.empty())
+        {
+            int n = nodesByLevel.size();
+            vector<int> valueByLevel;
+            for(int i = 0; i < n; i++)
+            {
+                TreeNode* node = nodesByLevel.front();
+                valueByLevel.push_back(node->val);
+                if(node->left)
+                {
+                    nodesByLevel.push(node->left);
+                }
+                if(node->right)
+                {
+                    nodesByLevel.push(node->right);
+                }
+                nodesByLevel.pop();
+            }
+            valueLevelOrder.push_back(valueByLevel);
+        }
+        reverse(valueLevelOrder.begin(), valueLevelOrder.end());
+        return valueLevelOrder;
+    }
+};```
