--- a/6.5 regular_expression_match.md
+++ b/6.5 regular_expression_match.md
@@ -1,2 +1,84 @@
 # Regular Expression Match
 
+Implement regular expression matching with support for ```'.'``` and ```'*'```.
+
+
+```
+'.' Matches any single character.
+'*' Matches zero or more of the preceding element.
+
+The matching should cover the entire input string (not partial).
+
+The function prototype should be:
+bool isMatch(const char *s, const char *p)
+
+Some examples:
+isMatch("aa","a") → false
+isMatch("aa","aa") → true
+isMatch("aaa","aa") → false
+isMatch("aa", "a*") → true
+isMatch("aa", ".*") → true
+isMatch("ab", ".*") → true
+isMatch("aab", "c*a*b") → true```
+
+
+
+---
+
+###Clarification, and a Little Inspiration
+
+Before we start, we need to make certain about what * actually does.
+
+```*``` only has effects on its preceding character. For example, in ```abc*bc```,  * only works on the preceding ```char c```.
+
+c* has two usages. 
+1. It removes c from the string.
+2. It repeats c at least one time. In this case, we can **think of ```c* ```as ```cc*```**. This is the very **inspiration** we need to solve the problem.
+
+
+
+###Hello, Again! Recursion
+
+The fundamental idea is to solve the problem using recusion. 
+
+We want to solve isMatch(str s, str p) using isMatch(str s.substr(1), str p.substr(1)).
+
+We have several cases to set up before we can call the recusion.
+
+1. Ending condition : p is empty.
+2. We can't call the recursion when p[1] is ```*```.  Therefor, we need to consider this pattern individually.
+3. Since ```*``` has two usages, we actually have two cases to deal with.
+
+###The Code
+
+The code is surprising short, despite some difficulty to understand the long compositive boolean statement. Don't worry, we will explain it in detail. 
+
+In the case of ```p[1] == '*'``` we have to consider two conditions, whether ```*``` means empty or repeat the preceding char. 
+
+1. If ```*``` means empty, recursively call```isMatch(s, p.substr(2))```.
+
+2. If ```*``` means repeating, we compare the first chars first, then call recursion: ```isMatch(s.substr(1), p)```. The thinking of ```c* ``` as ```cc*``` trick is used here. 
+
+The case  ```p[1] != '*'``` is straightforward -- compare the first char,. and recursively call ```isMatch(s.substr(1), p.substr(1))```
+
+---
+
+
+```
+class Solution {
+public:
+    bool isMatch(string s, string p) {
+        if(p.empty()){
+            return s.empty();
+        }
+        if(p[1] == '*'){
+            return isMatch(s, p.substr(2)) || ( !s.empty() && (s[0] == p[0] || p[0] == '.') && isMatch(s.substr(1), p) );
+        }
+        else{
+            return !s.empty() && (s[0] == p[0] || p[0] == '.') && isMatch(s.substr(1), p.substr(1));
+        }
+    }
+};
+
+```
+
