--- a/9.8 valid_palindrome.md
+++ b/9.8 valid_palindrome.md
@@ -1,2 +1,38 @@
 # Valid Palindrome
 
+Given a string, determine if it is a palindrome, considering only alphanumeric characters and ignoring cases.
+
+For example,
+
+```"A man, a plan, a canal: Panama"``` is a palindrome.
+
+```"race a car"``` is not a palindrome.
+
+Note:
+Have you consider that the string might be empty? This is a good question to ask during an interview.
+
+For the purpose of this problem, we define empty string as valid palindrome.
+
+
+
+---
+
+
+###The Code
+
+```
+class Solution {
+public:
+    bool isPalindrome(string s) {
+        // Double pointers move towards each other until they collide
+        for(int i = 0, j = s.size() - 1; i < j; i++, j--){
+            // Skip non alphanumeric chars
+            while(isalnum(s[i]) == false && i < j) i++;
+            while(isalnum(s[j]) == false && i < j) j--;
+            // Stop immediately if two chars don't match
+            if(toupper(s[i]) != toupper(s[j])) return false;
+        }
+        return true;
+    }
+};
+```
