--- a/9.8 valid_palindrome.md
+++ b/9.8 valid_palindrome.md
@@ -17,6 +17,9 @@ For the purpose of this problem, we define empty string as valid palindrome.
 
 ---
 
+###The Algorithm
+
+The algorithm is quite straightforward. We use two pointers, one at the beginning, and one at the end. Move them towards each other, while comparing chars once a time.
 
 ###The Code
 
