--- a/7.4 rectangle_area.md
+++ b/7.4 rectangle_area.md
@@ -1,2 +1,55 @@
 # Rectangle Area
 
+Find the total area covered by two rectilinear rectangles in a 2D plane.
+
+Each rectangle is defined by its bottom left corner and top right corner as shown in the figure.
+
+Rectangle Area
+
+![](https://leetcode.com/static/images/problemset/rectangle_area.png)
+
+Assume that the total area is never beyond the maximum possible value of int.
+
+
+
+###The Idea
+
+At first glance, there are quite a bit different situations that two rectangles can overlap with each other.
+
+We want to sort the problem in one single step, regardless how they overlap.
+
+If we can locate the overlapping area, we can get the total area.
+
+Look into the overlapping area, it is consisted of overlapping X times overlapping Y.
+
+Thus we can tackle down this problem by locating the overlapping X and Y, respectively.
+
+###The Code
+
+```
+class Solution {
+public:
+    // We calculate the overlapping range of x and y.
+    // Then the total area is area rec1 + area rec2 - overlappingX * overlappingY
+    int computeArea(int A, int B, int C, int D, int E, int F, int G, int H) {
+        int overlapX = 0;
+        int overlapY = 0;
+        int areaRec1 = (C-A)*(D-B);
+        int areaRec2 = (G-E)*(H-F);
+        // Either x or y has no overlapping, which menas the two rectangles do not overlap 
+        if(G < A || C < E || H < B || D < F){
+            return areaRec1 + areaRec2;
+        }
+        // Calculate overlapping of x
+        overlapX = A > E ? (G > C ? C - A : G - A) : (G > C ? C - E : G - E);
+        // Calculate overlapping of y
+        // The behaviors of y mirrors that of x 
+        overlapY = B > F ? (H > D ? D - B : H - B) : (H > D ? D - F : H - F);
+        return areaRec1 + areaRec2 - overlapX * overlapY;
+    }
+};
+```
+
+
+
+
