--- a/11.8 dungeon_game.md
+++ b/11.8 dungeon_game.md
@@ -28,3 +28,81 @@ Notes:
 The knight's health has no upper bound.
 
 Any room can contain threats or power-ups, even the first room the knight enters and the bottom-right room where the princess is imprisoned.
+
+
+
+---
+
+
+###Thinking Process
+
+  Different to general maze problems, it is not easy to grasp the core (**what we need**) at first glance. Yet, one thing is for sure, we are looking for **a best path consuming least resource** (hp in this problem).
+  
+  
+  As usual, I tried approaching with DP, building a full table from top-left to bottom-right. Each cell represents the min hp required to survive from entrance to the room. It failed because I cannot deal with continuous power-up rooms. 
+  
+  Instead of starting from top-left, we should start from bot-right, building the table in the opposite direction. By this way, we can handle power-ups smoothly. 
+  
+  ###Top-down DP
+  
+  In the DP table hp, ```hp[i][j]``` **represents** the min hp required to survive from ```room[i][j]``` to the princess's room. Each cell in DP is a **partial solution**.
+  
+Suppose we know hp[i][j+1] is the min hp to survive from ```room[i][j+1]``` to Princess's room. 
+
+Let's have a look at hp[i][j]. We will find that no matter room[i][j] contains monsters or power-ups, ```hp[i][j] = hp[i][j+1] - room[i][j]```.
+
+There is one exception : if the subtraction makes hp[i][j] less than 1. 
+
+Put these together, we have ```hp[i][j] = max(1, hp[i][j+1] - room[i][j])```.
+
+However, the above formula is just one candidate for ```hp[i][j]``` -- when we move right. We can also move down. The real ```hp[i][j] ```is the smaller one of two candidates.
+
+The **final formula** should look like:
+
+```hp[i][j] = min (hp[i][j] when moving right, hp[i][j] when moving down)```
+  
+  
+
+###Lesson Learned
+
+When the bot-up DP(building from 0 to target) fails, **try the other direction** -- top-down DP. Vice versa. 
+
+###The Code
+
+```
+class Solution {
+public:
+    // This problem is unique in that it starts building the DP table from bottom, right 
+    int calculateMinimumHP(vector<vector<int>>& dungeon) {
+        int height = dungeon.size();
+        if(height == 0) return 1;
+        int width = dungeon[0].size();
+        // 2D DP array, hp[i][j] represents the min hp required to survive from room[i][j] to princess's room
+        // We will build the array from bottom-right to top-left.
+        vector<vector<int>> hp(height, vector<int>(width, 0));
+        hp[height-1][width-1] = max(1, 1 - dungeon[height-1][width-1]);
+
+        for(int i = height-1; i >= 0 ; i--){
+            for(int j = width-1; j >= 0; j--){
+                if(i == height-1 && j == width-1){
+                    hp[i][j] = max(1, 1 - dungeon[i][j]);
+                }
+                else if(i == height-1){
+                    hp[i][j] = max(1, hp[i][j+1] - dungeon[i][j]);
+                }
+                else if(j == width-1){
+                    hp[i][j] = max(1, hp[i+1][j] - dungeon[i][j]);
+                }
+                else{
+                    int right = max(1, hp[i][j+1] - dungeon[i][j]);
+                    int down = max(1, hp[i+1][j] - dungeon[i][j]);
+                    hp[i][j] = min(right, down);
+                }
+            }
+        }
+        return hp[0][0];
+    }
+};
+```
+  
+  
