--- a/11.10-coin-change-2.md
+++ b/11.10-coin-change-2.md
@@ -15,8 +15,6 @@ You are given coins of different denominations and a total amount of money. Writ
 * the number of coins is less than 500
 * the answer is guaranteed to fit into signed 32-bit integer
 
-
-
 **Example 1:**
 
 ```
@@ -32,10 +30,7 @@ Explanation:
 5=2+2+1
 5=2+1+1+1
 5=1+1+1+1+1
-
 ```
-
-
 
 **Example 2:**
 
@@ -48,10 +43,7 @@ Output:
 
 Explanation:
  the amount of 3 cannot be made up just with coins of 2.
-
 ```
-
-
 
 **Example 3:**
 
@@ -63,15 +55,22 @@ Output:
  1
 ```
 
-
-
-
-
 ---
 
+1. Tried backtracking, but encounter problem of time exceed. \(No problem in logic\)
+2. Use DP, but the transition is not easy to find. **A few tips**:
 
+        2.1. Key for DP is to find expression for dp\[i\]\[j\] using any former cells, not limited to i-1 or j-1
 
-1. Tried 
+        2.2.  Expression for dp\[i\]\[j\] usually consists of two directions, sometimes a third direction.
+
+                \(a\) dp\[less i\]\[j\]     \(b\) dp\[i\]\[less j\]     \(c\) optional dp\[less i\]\[less j\]
+
+    Be **flexible **when consist the formula for dp\[i\]\[j\]
+
+          
+
+    
 
 
 
